# biowok

./: .gitignore  README.md  feedback_stream.hpp  nussinov.cpp  nussinov.hpp  nusstester.cpp  unt.txt  untitled.txt
Nuess/: config.cpp
Nuess/Nuess_ref/Align/: align  aligner.cpp  local_output.txt
Nuess/Nuess_ref/CSC 428B Assignment 4/: HMM_readme.txt  Results (GGCACTGAA).txt
Nuess/Nuess_ref/Nussinov/: Nussinov.py  Nussinov_readme.txt  provided_inputs.txt
Nuess/Nuess_ref/UPGMA/: UPGMA.py  UPGMA_results.txt  UPGMA_results_for_(even_sample.txt).txt
Older Reference Material/: NussTakeB.cpp  console_feeback.cpp  sequence_aligner.cpp
Older Reference Material/Nuess_ref/CSC 428B Assignment 4/: HMM.py  Results (GGCA).txt  provided_inputs.txt
Older Reference Material/Nuess_ref/UPGMA/: UPGMA.cpp  UPGMA.py  UPGMA_readme.txt  UPGMA_results_for_(even_sample.txt).txt  even_sample.txt
Older_Reference_Material/Nuess_ref/Align/: alignertroubleshooting.txt  global_output.txt
Older_Reference_Material/Nuess_ref/CSC 428B Assignment 4/: reanalyzed(python).py
Older_Reference_Material/Nuess_ref/UPGMA/: UPGMA_results_for_(test_sample_A.txt).txt
js/: Selenium_Note.js  webscraper_rough.js  youtube_scraper.js
lib/dna_sequence_aligner/: AligningStack.hpp  sequence_aligner.hpp  tester.cpp
lib/predict2ndary/: a  makefile  nussinov.cpp  nussinov.hpp  out.txt  tester  tester.cpp
lib/rna_secondary_structure_prediction/: a  notes.txt  nussinov.cpp  nussinov.hpp  tester.cpp
lib/src/aligner/: CMakeLists.txt  aligner.cpp  aligner.hpp  makefile  sequence_aligner.cpp  sequence_aligner.hpp  tester.cpp
lib/src/predict2ndary/: makefile  nussinov.cpp  out.txt  tester  tester.cpp
lib/src/util/: BiowokHelperFunctions.hpp  FormattedMatrix.hpp  TypeAbbreviations.hpp  feedback_stream.hpp
lib/util/: CompressedFormat.hpp
libs/aligner/: CMakeLists.txt
libs/aligner/exclude/: (old tests)makefile  (old)CMakeLists.txt  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  check.cpp  cmake_install.cmake
libs/aligner/exclude/tests/: CTestTestfile.cmake  Makefile
libs/aligner/include/: aligner.hpp  aligner.to_json.hpp
libs/aligner/src/: #include <array>.cpp  aligner(prev).cpp  aligner.cpp
libs/aligner/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  aligner.test.cpp  cmake_install.cmake  test_aligner
libs/emitprob/: CMakeLists.txt
libs/emitprob/include/: emitprob.hpp
libs/emitprob/src/: emitprob.cpp
libs/emitprob/tests/: CMakeLists.txt
libs/predict2ndary/: CMakeLists.txt
libs/predict2ndary/exclude/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
libs/predict2ndary/exclude/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_nussinov
libs/predict2ndary/include/: nussinov.hpp
libs/predict2ndary/src/: nussinov.cpp
libs/predict2ndary/tests/: CMakeLists.txt  makefile  nussinov.test.cpp
libs/upgma/: CMakeLists.txt
libs/upgma/exclude/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
libs/upgma/exclude/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_upgma
libs/upgma/include/: upgma.hpp
libs/upgma/src/: upgma.cpp
libs/upgma/tests/: CMakeLists.txt  upgma.test.cpp
libs/utils/: BiowokHelperFunctions.hpp  BiowokHelperFunctions.hpp.gch  CongruentMatrix.hpp  FeedbackMacro.hpp  FeedbackMacro.hpp.gch  JSONStream.hpp  TypeAbbreviations.hpp.gch  bwokArray  bwokCString.hpp  bwokFeedback.hpp  bwokMath.hpp  bwokPartialTypedMatrix.hpp  bwokStack.hpp  bwokTypedMatrix.hpp
libs/utils/bwokjson/include/: bwokJSONOutput.hpp
